# Aura_AMR

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/aura_bringup/: CMakeLists.txt
src/aura_bringup/launch/: simulation.launch.py
src/aura_controller/: CMakeLists.txt  package.xml
src/aura_controller/aura_controller/: slider_arm.py  twist_relay_node.py
src/aura_controller/config/: aura_controllers.yaml  joy_teleop.yaml
src/aura_controller/launch/: controller.launch.py  slider.launch.py
src/aura_description/: CMakeLists.txt
src/aura_description/launch/: display.launch.py  gazebo.launch.py
src/aura_description/meshes/: end_effector.stl  front_castor.stl  gripper_left.stl  left_wheel.stl  top_plate.stl  wall.stl
src/aura_description/urdf/: aura.urdf.xacro  aura_arm.xacro  aura_base.xacro  aura_gazebo.xacro  aura_materials.xacro  aura_ros2control.xacro
src/aura_description/worlds/: empty.world  small_house.world
src/aura_localization/: CMakeLists.txt
src/aura_localization/rviz/: global_localization.rviz
src/aura_mapping/: CMakeLists.txt
src/aura_mapping/config/: exploration_params.yaml
src/aura_moveit/: CMakeLists.txt  package.xml
src/aura_moveit/config/: aura.srdf  kinematics.yaml  moveit.rviz
src/aura_moveit/launch/: moveit.launch.py  task_server.launch.py
src/aura_moveit/src/: task_server.cpp
src/aura_msgs/: CMakeLists.txt
src/aura_navigation/: CMakeLists.txt  package.xml
src/aura_script/: package.xml  setup.cfg  setup.py
src/aura_vision/: setup.cfg  setup.py
(+607 files in other folders)
